--- a/index.html
+++ b/index.html
@@ -26,6 +26,31 @@
             </div>
         </div>
     </section>
+
+    <section class="donate-section">
+        <div class="donate">
+            <h2>Donate Today</h2>
+            <p>All the deguster is dangerous. Flood is one of them. Try to help people.so donate today.It's help the
+                people.</p>
+        </div>
+        <div class="container">
+            <div class="money">
+                <h3>100TK</h3>
+            </div>
+            <div class="money">
+                <h3>200TK</h3>
+            </div>
+            <div class="money">
+                <h3>500TK</h3>
+            </div>
+            <div class="money">
+                <h3>1000TK</h3>
+            </div>
+            <div class="money">
+                <h3>1500TK</h3>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
