--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="money">
                 <h3>100TK</h3>
             </div>
-            <div class="money">
+            <div id="color-money" class="money">
                 <h3>200TK</h3>
             </div>
             <div class="money">
@@ -49,6 +49,30 @@
             <div class="money">
                 <h3>1500TK</h3>
             </div>
+        </div>
+        <div class="amount">
+            <h5>Other amount(taka)</h5>
+            <span></span>
+
+        </div>
+        <div class="button">
+            <a href="">Donate Now</a>
+        </div>
+    </section>
+
+    <section class="donate-plan-section">
+        <div class="our-plan">
+            <h2>Our Donate Plan</h2>
+            <p>All the deguster is dangerous. Flood is one of them. Try to help people.so donate today.It's help the
+                people.</p>
+        </div>
+        <div class="container">
+            <div id="food" class="family">
+                <img src="icons/food.png" alt="">
+                <h4>Food for a Family</h4>
+            </div>
+            <div id="selter" class="family"></div>
+            <div id="education" class="family"></div>
         </div>
     </section>
 </body>
