--- a/index.html
+++ b/index.html
@@ -63,16 +63,28 @@
     <section class="donate-plan-section">
         <div class="our-plan">
             <h2>Our Donate Plan</h2>
-            <p>All the deguster is dangerous. Flood is one of them. Try to help people.so donate today.It's help the
-                people.</p>
+            <p>Yuva Social Movement is working among the underprivileged children and youths. Yuva Social Movement is
+                the best NGO in India working for children's. Mask Off. Income Generation Program. </p>
         </div>
         <div class="container">
             <div id="food" class="family">
                 <img src="icons/food.png" alt="">
                 <h4>Food for a Family</h4>
+                <p>we have identified refugee families & their children for part of a food protection program. Your
+                    donation will serve food packages to families.</p>
             </div>
-            <div id="selter" class="family"></div>
-            <div id="education" class="family"></div>
+            <div id="selter" class="family">
+                <img src="icons/shelter.png" alt="">
+                <h4>Selter for a Family</h4>
+                <p>The Shelter Working Group is documenting the experiences of its member agencies on family shelter
+                    reconstruction programmes post Cyclone Sidr 2007.</p>
+            </div>
+            <div id="education" class="family">
+                <img src="icons/Frame-1.png" alt="">
+                <h4>Education for a childern</h4>
+                <p>Best free education project for orphan and less privileged pupil to support in Nigeria. Join to
+                    support children education in Africa through Helpers Foundation initiative.</p>
+            </div>
         </div>
     </section>
 </body>
