--- a/index.html
+++ b/index.html
@@ -87,6 +87,38 @@
             </div>
         </div>
     </section>
+
+    <section class="self-make">
+        <div class="container">
+            <div class="service">
+                <h4>Company</h4>
+                <nav>
+                    <ul>
+                        <li>Home</li>
+                        <li>About</li>
+                        <li>Pricing</li>
+                        <li>contact us</li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="service">
+                <h4>Others</h4>
+                <nav>
+                    <ul>
+                        <li>Helps & support</li>
+                        <li>Privacy Policy</li>
+                        <li>Terms</li>
+                        <li>Sitemap</li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="service news">
+                <h4>Newsletter</h4>
+                <p>Subcribe to our newsletter and get all the cool news</p>
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
