--- a/index.html
+++ b/index.html
@@ -119,6 +119,23 @@
         </div>
     </section>
 
+
+    <section class="update-section">
+        <div class="update">
+            <h2>Get my Updates</h2>
+            <p>Your donation will support Plan International's vital work to advance children's rights and equality for
+                girls. Click below to find out more.</p>
+        </div>
+        <div class="container">
+            <div class="email">
+                <form action="">
+                    <input type="email" placeholder="Email">
+                    <button type="button">Subcribe</button>
+                </form>
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
