--- a/index.html
+++ b/index.html
@@ -136,6 +136,11 @@
         </div>
     </section>
 
+    <footer>
+        <h2 class="humble">Be humble</h2>
+        <p>i am gonna do it</p>
+    </footer>
+
 </body>
 
 </html>
