--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
     <footer>
         <h2 class="humble">Be humble</h2>
-        <p>i am gonna do it</p>
+        <p>I am gonna do it</p>
     </footer>
 
 </body>
